# earthquake_proj

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
audits/: 2026-06-03-foundation.md
checkpoints/: final_model.pth
checkpoints/eval/: final_model.pth
configs/: real_world.yaml
data/: cleaned_historical_Eq.csv
data/Morteza_2023/: mask.txt  seismicity.txt
data/files/: Vs.txt  historical_Eq.txt  stress.txt
data/kinematic_data/: anisotropy_sadidkhuyi2010.csv  gps_strain_khorrami1390.csv  gps_strain_rayisi2016.csv  stress_NF.csv  stress_RF.csv  stress_SS.csv
data/synthetic_eval/: cat_simple_shear.csv  gps_simple_shear.csv  truth_simple_shear.pt
docs/md/: first_proposal.md
docs/proposal/: proposal_v2.tex  proposal_v3.tex  proposal_v4.tex  research_proposal.tex
notebooks/: data_prep.ipynb  dynamic_forecast_results.csv  etas.ipynb  etas_catalog.csv  final_feature_matrix.csv  grid_with_kinematic_features.csv  grid_with_structural_features.csv  modeling.ipynb  modeling_xgb.ipynb  run_on_cloud.ipynb  study_grid.csv  susceptibility_map_results.csv
notebooks/colab/: cloab_gpu.ipynb
results/optuna/: best_config.yaml  earthquake_pinn_hpo.db
results/tables/: best_params.json  optuna_tuning_results.csv  training_history.json
src/analysis/: ablation.py  inference.py  real_world_val.py  robustness.py  (+1 more)
tests/: test_cli.py  test_config.py  test_coulomb.py  test_data.py  test_elastic.py  test_engine.py  test_loaders.py  test_model.py  test_multi_gpu.py  test_physics.py  test_resume_logic.py  test_synthetic_recovery.py  test_visualize.py
(+53 files in other folders)
