[project]
name = "earthquake-proj"
version = "0.1.0"
description = "Physics-Informed Neural Network for Lithospheric Stress Inversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "typer>=0.23.1",
    "seaborn>=0.13.0",
    "wrapt>=2.1.1",
    "pydrive2>=1.21.3",
    "pyyaml>=6.0.0",
]

[project.scripts]
earthquake-proj = "src.pipelines.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]
